--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
-<link rel="stylesheet" href="/dist/main.css">
-<div id="app"></div>
-<script src="/dist/main.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Playground</title>
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+  </head>
+
+  <body>
+    <div id="startofbody"></div>
+    <div id="app"></div>
+    <div id="endofbody"></div>
+    <script type="module" src="/src/main.js"></script>
+    <!-- <script src="/src/main.js"></script> -->
+  </body>
+</html>
